reports/lecture2.log
Traceback (most recent call last):
  File "/Users/ggeorg02/opt/miniconda3/envs/jupydays/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/ggeorg02/opt/miniconda3/envs/jupydays/lib/python3.8/site-packages/nbclient/client.py", line 1093, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/ggeorg02/opt/miniconda3/envs/jupydays/lib/python3.8/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/ggeorg02/opt/miniconda3/envs/jupydays/lib/python3.8/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/ggeorg02/opt/miniconda3/envs/jupydays/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/Users/ggeorg02/opt/miniconda3/envs/jupydays/lib/python3.8/site-packages/nbclient/client.py", line 559, in async_execute
    await self.async_execute_cell(
  File "/Users/ggeorg02/opt/miniconda3/envs/jupydays/lib/python3.8/site-packages/nbclient/client.py", line 854, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/ggeorg02/opt/miniconda3/envs/jupydays/lib/python3.8/site-packages/nbclient/client.py", line 756, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
In this class, we will be using the tables that we created in lecture 1. Here are the scripts if you want to recreate the classroom exercise table.

```{toggle}

```sql
DROP TABLE IF EXISTS students,courses;

CREATE TABLE IF NOT EXISTS students(
student_no integer PRIMARY KEY, 
stud_name text,
age integer,
major text);

CREATE TABLE IF NOT EXISTS courses(
id SERIAL PRIMARY KEY,
student_no integer, 
course_name text,
course_year integer,
course_percentage float);

INSERT INTO students(student_no,stud_name,age,major) VALUES (111,'Catherine',23,'MBAN'),
(222,'Tiff',28,'MDS'),
(333,'John',23,'MBAN'),
(444,'Amir',28,'MBAN'),
(555,'Gittu',20,'MDS'),
(666,'Isha',30,'MBAN'),
(777,'Heidy',30,'MBAN'),
(888,'Angela',27,'MBAN'),
(999,'Jason',30,'MBAN');

INSERT INTO courses(student_no,course_name,course_year,course_percentage) VALUES (111,'TPCS INFO TECH',2019,88),
(111,'Data Visualization',2019,88),
(222,'Health and Technology',2020,80),
(222,'Web and Cloud Computing',2019,91),
(222,'Spark Programming',2019,90),
(333,'Parallel Computing',2019,90),
(444,'Large Scale Infrastructures',2019,83),
(444,'TPCS INFO TECH',2019,98),
(555,'TPCS INFO TECH',2020,78),
(555,'Health and Technology',2020,81),
(666,'Data Visualization',2021,85),
(666,'Parallel Computing',2019,87),
(888,'Spark Programming',2019,93),
(999,'TPCS INFO TECH',2019,98),
(999,'Data Visualization',2019,87),
(1000,'C programming',2019,87),
(1111,'Introduction to Genomics',2019,87);
```
------------------

[0;36m  File [0;32m"/var/folders/v_/0w5208h573j548vzb2lrmnww0000gq/T/ipykernel_48730/1708386065.py"[0;36m, line [0;32m1[0m
[0;31m    In this class, we will be using the tables that we created in lecture 1. Here are the scripts if you want to recreate the classroom exercise table.[0m
[0m       ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (1708386065.py, line 1)

